(feat) Augmented Pure Python testbench

--- a/c_cython_app_python.ipynb
+++ b/c_cython_app_python.ipynb
@@ -54,7 +54,11 @@
     "<summary>The ``mandelbrot`` fractal image</summary>  \n",
     "  \n",
     "  - Pure Python  \n",
-    "  - Pure C  \n",
+    "  - Pure C\n",
+    "  - Cython\n",
+    "    - Calling C\n",
+    "    - Cythonize .pyx\n",
+    "    - Cythonize .py (Augmented Pure Python mode)\n",
     "  - Measure speed of execution\n",
     "</details>  \n",
     "<p></p>\n",
@@ -79,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 97,
    "metadata": {
     "scrolled": false
    },
@@ -89,26 +93,52 @@
     "from __future__ import print_function, division\n",
     "%matplotlib notebook\n",
     "from timeit import default_timer as timer\n",
-    "import numpy as np\n",
     "from PIL import Image\n",
     "import subprocess\n",
     "import os, sys\n",
     "import numpy as np\n",
-    "from matplotlib.pylab import imshow, show, figure, subplots, get_cmap\n",
-    "import pyximport\n"
+    "from matplotlib.pylab import imshow, show, figure, subplots, get_cmap\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running build_ext\n",
+      "building 'cython_sources.app_decorated_mandel' extension\n",
+      "gcc -pthread -B /opt/conda/compiler_compat -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O2 -Wall -fPIC -O2 -isystem /opt/conda/include -fPIC -O2 -isystem /opt/conda/include -fPIC -I/opt/conda/include/python3.10 -c cython_sources/app_decorated_mandel.cpp -o build/temp.linux-x86_64-3.10/cython_sources/app_decorated_mandel.o\n",
+      "g++ -pthread -B /opt/conda/compiler_compat -shared -Wl,-rpath,/opt/conda/lib -Wl,-rpath-link,/opt/conda/lib -L/opt/conda/lib -Wl,-rpath,/opt/conda/lib -Wl,-rpath-link,/opt/conda/lib -L/opt/conda/lib build/temp.linux-x86_64-3.10/cython_sources/app_decorated_mandel.o -o build/lib.linux-x86_64-3.10/cython_sources/app_decorated_mandel.cpython-310-x86_64-linux-gnu.so\n",
+      "building 'cython_sources.app_mandel' extension\n",
+      "gcc -pthread -B /opt/conda/compiler_compat -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O2 -Wall -fPIC -O2 -isystem /opt/conda/include -fPIC -O2 -isystem /opt/conda/include -fPIC -I/opt/conda/include/python3.10 -c cython_sources/app_mandel.cpp -o build/temp.linux-x86_64-3.10/cython_sources/app_mandel.o\n",
+      "g++ -pthread -B /opt/conda/compiler_compat -shared -Wl,-rpath,/opt/conda/lib -Wl,-rpath-link,/opt/conda/lib -L/opt/conda/lib -Wl,-rpath,/opt/conda/lib -Wl,-rpath-link,/opt/conda/lib -L/opt/conda/lib build/temp.linux-x86_64-3.10/cython_sources/app_mandel.o -o build/lib.linux-x86_64-3.10/cython_sources/app_mandel.cpython-310-x86_64-linux-gnu.so\n",
+      "copying build/lib.linux-x86_64-3.10/cython_sources/app_decorated_mandel.cpython-310-x86_64-linux-gnu.so -> cython_sources\n",
+      "copying build/lib.linux-x86_64-3.10/cython_sources/app_mandel.cpython-310-x86_64-linux-gnu.so -> cython_sources\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "0"
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Somehow, Cython 'Magic' in Jupyter does not provide a means to handle Augmented Pure Python modules (or at least I could not figure it out)\n",
     "# The solutions adopted is to separately compile the Augmented Pure Python modules in a subdirectory (using setup.py) and use pyximport\n",
     "# The Jupyter kernel does not seem to even load the compiled modules and loads the Pure Python code instead!\n",
+    "import pyximport\n",
     "pyximport.install()\n",
-    "sys.path.insert(0, \"/home/memento/PycharmProjects/c_from_python/cython_sources\")\n"
+    "sys.path.insert(0, \"./c_from_python/cython_sources\")\n",
+    "\n",
+    "# Once this is ran, you need to restart your Jupyter kernel\n",
+    "subprocess.check_call(['python', 'setup.py', 'build_ext', '--inplace'])"
    ]
   },
   {
